# Burning-Cinema-Box-Office

./: .env.example  .gitignore  CLAUDE.md  docker-compose.test.yml  railway.toml
.github/workflows/: ci.yml  deploy.yml
docs/: design-foundation.md  domain.md  product.md  regulations.md  roadmap.md
services/backend/: Dockerfile  pyproject.toml
services/backend/src/burningbackend/app/: main.py
services/backend/src/burningbackend/app/api/v1/: __init__.py
services/backend/src/burningbackend/app/api/v1/endpoints/: auth.py  history.py  inventory.py  movies.py  report.py  reservation.py
services/backend/src/burningbackend/app/core/: config.py  deps.py  security.py
services/backend/src/burningbackend/app/models/: history.py  inventory.py  movie.py  reservation.py
services/backend/tests/: conftest.py  test_auth.py  test_history.py  test_inventory.py  test_movies.py  test_report.py  test_reservation.py  test_security.py
