[tool.poetry]
name = "burningbackend"
version = "0.0.1"
description = ""
authors = ["Lukas Holzner <git@lukas.lhal.de>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "burningbackend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
beanie = "^1.21.0"
passlib = "^1.7.4"
openpyxl = "^3.1.2"
pandas = "^2.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
mongomock-motor = "^0.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
asyncio_mode = "auto"
